--- a/app/src/main/res/drawable/tri_up_white.xml
+++ b/app/src/main/res/drawable/tri_up_white.xml
@@ -7,6 +7,7 @@
             android:pivotX="-40%"
             android:pivotY="80%">
             <shape android:shape="rectangle">
+                <size android:width="@dimen/dp_40" android:height="@dimen/dp_40"/>
                 <solid android:color="@color/white"/>
             </shape>
         </rotate>
