--- a/app/src/main/res/layout/activity_scan_goods_list.xml
+++ b/app/src/main/res/layout/activity_scan_goods_list.xml
@@ -13,7 +13,7 @@
 
         <TextView
             style="@style/title_text"
-            android:text="扫码购活动名称"/>
+            android:text=""/>
 
         <ImageView
             style="@style/title_right"
@@ -104,47 +104,12 @@
             />
 
         <!--底部购物-->
-        <LinearLayout
+        <cn.czyugang.tcg.client.widget.BottomBalanceView
             android:id="@+id/goods_bottom_trolley"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_50"
             android:layout_gravity="bottom"
-            android:background="@color/white"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            >
-
-            <ImageView
-                android:id="@+id/goods_trolley_img"
-                android:layout_width="@dimen/dp_30"
-                android:layout_height="@dimen/dp_30"
-                android:layout_marginLeft="@dimen/dp_10"
-                android:layout_marginRight="@dimen/dp_16"
-                android:src="@drawable/trolley"/>
-
-            <TextView
-                android:id="@+id/goods_money"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/dp_15"
-                android:text="￥99.99"
-                android:textColor="@color/main_red"
-                android:textSize="@dimen/sp_18"
-                />
-
-            <include layout="@layout/space_h"/>
-
-            <TextView
-                android:id="@+id/goods_to_pay"
-                android:layout_width="@dimen/dp_100"
-                android:layout_height="match_parent"
-                android:background="@color/main_red"
-                android:gravity="center"
-                android:text="去结算"
-                android:textColor="@color/white"
-                android:textSize="@dimen/sp_18"/>
-
-        </LinearLayout>
+            />
 
         <!--排序-->
         <cn.czyugang.tcg.client.widget.SpinnerSelectView
