--- a/app/src/main/res/layout/fragment_home_goods.xml
+++ b/app/src/main/res/layout/fragment_home_goods.xml
@@ -48,4 +48,15 @@
         android:text="降价拍"
         />
 
+    <TextView
+        android:id="@+id/homepage_ewmyh"
+        android:layout_width="@dimen/dp_180"
+        android:layout_height="@dimen/dp_40"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/dp_8"
+        android:background="@color/main_white"
+        android:gravity="center"
+        android:text="二维码优惠"
+        />
+
 </LinearLayout>
