--- a/app/src/main/res/layout/view_more.xml
+++ b/app/src/main/res/layout/view_more.xml
@@ -5,6 +5,12 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <ImageView
+        android:layout_width="@dimen/dp_12"
+        android:layout_height="@dimen/dp_16"
+        android:src="@drawable/tri_up_white"
+        android:layout_gravity="right"
+        android:layout_marginRight="@dimen/dp_10"/>
     <FrameLayout
         android:id="@+id/more_msg"
         android:layout_width="match_parent"
