--- a/app/src/main/res/layout/fragment_home_goods.xml
+++ b/app/src/main/res/layout/fragment_home_goods.xml
@@ -59,4 +59,15 @@
         android:text="二维码优惠"
         />
 
+    <TextView
+        android:id="@+id/homepage_coupon"
+        android:layout_width="@dimen/dp_180"
+        android:layout_height="@dimen/dp_40"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/dp_8"
+        android:background="@color/main_white"
+        android:gravity="center"
+        android:text="我的优惠券"
+        />
+
 </LinearLayout>
