--- a/app/src/main/res/layout/item_inform_news_large.xml
+++ b/app/src/main/res/layout/item_inform_news_large.xml
@@ -58,6 +58,21 @@
             android:textSize="@dimen/sp_11"
             android:textColor="@color/text_dark_gray"/>
         <TextView
+            android:id="@+id/inform_news_large_identity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/border_rect_cir_red"
+            android:padding="@dimen/dp_2"
+            android:layout_marginLeft="@dimen/dp_5"
+            android:layout_toRightOf="@id/inform_news_large_name"
+            android:layout_alignBaseline="@id/inform_news_large_name"
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            android:text="个人认证"
+            android:textSize="@dimen/sp_6"
+            android:textColor="@color/main_red"
+            android:visibility="gone"/>
+        <TextView
             android:id="@+id/inform_news_large_commitNum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
