--- a/app/src/main/res/layout/activity_aftersale_refund.xml
+++ b/app/src/main/res/layout/activity_aftersale_refund.xml
@@ -30,7 +30,11 @@
             android:focusableInTouchMode="true"
             android:orientation="vertical">
 
-            <include layout="@layout/view_item_good"/>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/refund_goods_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
 
             <include layout="@layout/view_split_bar_light"/>
 
