--- a/app/src/main/res/layout/activity_discount_my_coupon.xml
+++ b/app/src/main/res/layout/activity_discount_my_coupon.xml
@@ -27,6 +27,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@android:color/white"/>
+        android:background="@color/bg"/>
 
 </LinearLayout>
