--- a/app/src/main/res/layout/activity_discount_select.xml
+++ b/app/src/main/res/layout/activity_discount_select.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     android:orientation="vertical">
     <FrameLayout
         style="@style/title_title">
@@ -18,7 +19,7 @@
         android:id="@+id/discount_tab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/main_white"/>
+        />
 
 
     <android.support.v4.view.ViewPager
@@ -26,6 +27,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@android:color/white"/>
+        android:background="@color/bg"/>
+
+    <Button
+        style="@style/button_bottom"/>
 
 </LinearLayout>
