--- a/app/src/main/res/layout/item_discount_activity.xml
+++ b/app/src/main/res/layout/item_discount_activity.xml
@@ -2,7 +2,32 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:orientation="vertical"
+    android:layout_marginBottom="@dimen/dp_10">
+
+    <LinearLayout
+        style="@style/item_44_group">
+
+        <cn.czyugang.tcg.client.widget.SelectButton
+            android:id="@+id/item_select"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            style="@style/text_14_black"
+            android:layout_marginLeft="@dimen/dp_10"/>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/item_detail"
+        style="@style/text_14_dark_gray"
+        android:layout_height="wrap_content"
+        android:lineSpacingMultiplier="1.2"
+        android:paddingLeft="@dimen/dp_10"
+        android:paddingTop="@dimen/dp_15"
+        android:paddingBottom="@dimen/dp_15"
+        />
 
 </LinearLayout>
