--- a/app/src/main/res/layout/item_discout_open_get_coupon.xml
+++ b/app/src/main/res/layout/item_discout_open_get_coupon.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/dp_180"
-    android:layout_height="@dimen/dp_40"
-    android:background="@color/white">
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/dp_90"
+    >
 
     <TextView
         style="@style/text_14_dark_gray"
+        android:id="@+id/item_discout_open_get_coupon"
+        android:layout_width="@dimen/dp_180"
+        android:layout_height="@dimen/dp_40"
         android:layout_gravity="center"
+        android:gravity="center"
+        android:background="@color/white"
         android:text="去领券中心看看"/>
 
 </FrameLayout>
