还是咨询评论

--- a/app/src/main/res/layout/activity_inform_details.xml
+++ b/app/src/main/res/layout/activity_inform_details.xml
@@ -172,6 +172,8 @@
             android:id="@+id/comment_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingLeft="@dimen/dp_10"
+            android:paddingRight="@dimen/dp_10"
             android:background="@color/white">
 
         </android.support.v7.widget.RecyclerView>
