--- a/app/src/main/res/layout/activity_inform_details.xml
+++ b/app/src/main/res/layout/activity_inform_details.xml
@@ -66,11 +66,10 @@
         android:orientation="vertical">
 
 
-        <WebView
+        <cn.czyugang.tcg.client.widget.BaseWebView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        </WebView>
+            android:layout_height="wrap_content"
+            />
 
         <RelativeLayout
             android:layout_width="match_parent"
