--- a/app/src/main/res/layout/item_inform_details_comment_title.xml
+++ b/app/src/main/res/layout/item_inform_details_comment_title.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/dp_10"
+    android:paddingLeft="@dimen/dp_10"
     android:background="@color/white">
     <TextView
         android:id="@+id/comment_title"
