--- a/app/src/main/res/layout/dialog_inform_comment_edit_content.xml
+++ b/app/src/main/res/layout/dialog_inform_comment_edit_content.xml
@@ -16,6 +16,7 @@
         style="@style/text_16_white"
         android:text="发送"/>
     <EditText
+        android:id="@+id/inform_comment_reply"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="@dimen/dp_10"
