--- a/app/src/main/res/layout/item_inform_details_comment_cotent.xml
+++ b/app/src/main/res/layout/item_inform_details_comment_cotent.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:paddingLeft="@dimen/dp_10"
     android:paddingRight="@dimen/dp_10"
+    android:paddingBottom="@dimen/dp_10"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:orientation="vertical">
