--- a/app/src/main/res/layout/item_inform_details_comment_cotent_detail.xml
+++ b/app/src/main/res/layout/item_inform_details_comment_cotent_detail.xml
@@ -4,13 +4,15 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
     <TextView
+        android:id="@+id/comment_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/dp_15"
+        android:paddingTop="@dimen/dp_10"
         android:text="扎心了老铁"
         android:textSize="@dimen/sp_12"
         android:textColor="@color/text_gray"/>
     <TextView
+        android:id="@+id/comment_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_5"
@@ -18,6 +20,7 @@
         android:textSize="@dimen/sp_10"
         android:textColor="@color/text_light_gray" />
     <TextView
+        android:id="@+id/comment_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_10"
@@ -27,8 +30,8 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_0.5"
-        android:background="@color/text_gray"
-        android:layout_marginTop="@dimen/dp_15"
+        android:background="@color/grey_350"
+        android:layout_marginTop="@dimen/dp_10"
         />
 
 
