--- a/app/src/main/res/layout/activity_edit_article.xml
+++ b/app/src/main/res/layout/activity_edit_article.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <FrameLayout
@@ -10,7 +12,7 @@
 
         <ImageView
             style="@style/title_back"
-            android:src="@drawable/ic_back_arrow" />
+            android:src="@drawable/ic_back_arrow"/>
 
         <TextView
             android:id="@+id/inform_label_content_title_name"
@@ -19,7 +21,7 @@
             android:layout_gravity="center"
             android:text="编辑文章"
             android:textColor="@color/text_dark_gray"
-            android:textSize="@dimen/sp_18" />
+            android:textSize="@dimen/sp_18"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -35,215 +37,215 @@
 
     </FrameLayout>
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:paddingBottom="@dimen/dp_15"
-        android:paddingLeft="@dimen/dp_10"
-        android:paddingTop="@dimen/dp_15">
-
-        <FrameLayout
-            android:layout_width="@dimen/dp_130"
-            android:layout_height="@dimen/dp_88">
-
-            <cn.czyugang.tcg.client.utils.img.ImgView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="gone" />
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/border_rect_grey_dashed"
-                android:layerType="software">
-
-                <ImageView
-                    android:layout_width="@dimen/dp_16"
-                    android:layout_height="@dimen/dp_16"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="@dimen/dp_20"
-                    android:src="@drawable/ic_add_small" />
-
-                <TextView
-                    style="@style/text_16_grey"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="@dimen/dp_46"
-                    android:text="添加封面" />
-            </FrameLayout>
-        </FrameLayout>
-    </FrameLayout>
-
-    <RelativeLayout
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/dp_10"
-        android:background="@color/white"
-        android:focusable="true"
-        android:focusableInTouchMode="true">
-
-        <EditText
-            android:id="@+id/edit_article_content_title"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_45"
-            android:background="@null"
-            android:gravity="center|left"
-            android:hint="标题"
-            android:paddingLeft="@dimen/dp_20"
-            android:paddingRight="@dimen/dp_10"
-            android:textColorHint="@color/grey_350"
-            android:textSize="@dimen/sp_16" />
-
-        <View
-            android:layout_width="@dimen/dp_4"
-            android:layout_height="@dimen/dp_19"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:layout_marginRight="@dimen/dp_10"
-            android:layout_marginTop="@dimen/dp_13"
-            android:background="@color/main_red" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_0.5"
-            android:layout_below="@id/edit_article_content_title"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:layout_marginRight="@dimen/dp_10"
-            android:background="@color/grey_350" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_0.5"
-            android:layout_above="@id/edit_article_toolbar"
-            android:background="@color/grey_350" />
-
-        <!--底部工具栏-->
-        <FrameLayout
-            android:id="@+id/edit_article_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_50"
-            android:layout_alignParentBottom="true">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_35"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/dp_5"
-                    android:layout_marginRight="@dimen/dp_30"
-                    android:src="@drawable/icon_picture" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="@dimen/dp_30"
-                    android:src="@drawable/icon_take_photo" />
-
-                <ImageView
-                    android:id="@+id/edit_article_to_link"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="@dimen/dp_30"
-                    android:src="@drawable/icon_lianjie" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="@dimen/dp_30"
-                    android:src="@drawable/icon_fengxiangshangpin" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="@dimen/dp_30"
-                    android:src="@drawable/icon_fengexian" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="@dimen/dp_30"
-                    android:src="@drawable/icon_chehui" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="@dimen/dp_5"
-                    android:src="@drawable/icon_huifu" />
-            </LinearLayout>
-        </FrameLayout>
-
-
-        <EditText
-            android:id="@+id/edit_article_content"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@id/edit_article_toolbar"
-            android:layout_below="@id/edit_article_content_title"
-            android:background="@null"
-            android:gravity="top|left"
-            android:hint="内容"
-            android:padding="@dimen/dp_10"
-            android:textColorHint="@color/grey_350"
-            android:textSize="@dimen/sp_16"
-            android:lineSpacingExtra="@dimen/dp_5"/>
-
-        <Button
-            android:id="@+id/edit_article_type"
-            android:layout_width="@dimen/dp_50"
-            android:layout_height="@dimen/dp_50"
-            android:layout_above="@id/edit_article_toolbar"
-            android:layout_alignRight="@+id/edit_article_toolbar"
-            android:layout_marginBottom="@dimen/dp_15"
-            android:layout_marginRight="@dimen/dp_16"
-            android:background="@drawable/bg_rect_cir_light_red"
-            android:gravity="center"
-            android:text="原创"
-            android:textColor="@color/main_red"
-            android:textSize="@dimen/sp_16" />
+        android:layout_marginBottom="@dimen/dp_50"
+        android:layout_marginTop="@dimen/title_bar_height">
 
         <LinearLayout
-            android:id="@+id/edit_article_type_content"
-            android:layout_width="@dimen/dp_58"
-            android:layout_height="@dimen/dp_80"
-            android:layout_above="@+id/edit_article_type"
-            android:layout_alignRight="@+id/edit_article_toolbar"
-            android:layout_marginBottom="@dimen/dp_5"
-            android:layout_marginRight="@dimen/dp_12"
-            android:background="@drawable/bg_bubble"
-            android:orientation="vertical"
-            android:visibility="gone">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/edit_article_type_content_original"
+            <!--封面-->
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_35"
-                android:gravity="center"
-                android:text="原创"
-                android:textColor="@color/white"
-                android:textSize="@dimen/sp_16" />
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:paddingBottom="@dimen/dp_15"
+                android:paddingLeft="@dimen/dp_10"
+                android:paddingTop="@dimen/dp_15">
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_0.5"
-                android:layout_marginLeft="@dimen/dp_5"
-                android:layout_marginRight="@dimen/dp_5"
-                android:background="@color/white" />
+                <FrameLayout
+                    android:layout_width="@dimen/dp_130"
+                    android:layout_height="@dimen/dp_88"
+                    android:background="@drawable/border_rect_grey_dashed"
+                    android:layerType="software">
 
-            <TextView
-                android:id="@+id/edit_article_type_content_reprint"
+                    <ImageView
+                        android:layout_width="@dimen/dp_16"
+                        android:layout_height="@dimen/dp_16"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="@dimen/dp_20"
+                        android:src="@drawable/ic_add_small"/>
+
+                    <TextView
+                        style="@style/text_16_grey"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="@dimen/dp_46"
+                        android:text="添加封面"/>
+                </FrameLayout>
+
+                <cn.czyugang.tcg.client.utils.img.ImgView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:visibility="gone"/>
+
+            </FrameLayout>
+
+            <include layout="@layout/view_split_bar_light_big"/>
+            <!--标题-->
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_35"
-                android:gravity="center"
-                android:text="转载"
-                android:textColor="@color/white"
-                android:textSize="@dimen/sp_16" />
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="@dimen/dp_4"
+                    android:layout_height="@dimen/dp_19"
+                    android:layout_marginLeft="@dimen/dp_10"
+                    android:layout_marginRight="@dimen/dp_10"
+                    android:layout_marginTop="@dimen/dp_13"
+                    android:background="@color/main_red"/>
+
+                <EditText
+                    android:id="@+id/edit_article_content_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_45"
+                    android:background="@null"
+                    android:gravity="center|left"
+                    android:hint="标题"
+                    android:paddingLeft="@dimen/dp_20"
+                    android:paddingRight="@dimen/dp_10"
+                    android:textColorHint="@color/grey_350"
+                    android:textSize="@dimen/sp_16"/>
+            </LinearLayout>
+
+            <include layout="@layout/view_split_bar_light"/>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/edit_article_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
 
         </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 
-    </RelativeLayout>
+    <!--底部工具栏-->
+    <FrameLayout
+        android:id="@+id/edit_article_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_50"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom">
 
-</LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_35"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/edit_article_input_img"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/dp_5"
+                android:layout_marginRight="@dimen/dp_30"
+                android:src="@drawable/icon_picture"/>
+
+            <ImageView
+                android:id="@+id/edit_article_input_photo"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="@dimen/dp_30"
+                android:src="@drawable/icon_take_photo"/>
+
+            <ImageView
+                android:id="@+id/edit_article_to_link"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="@dimen/dp_30"
+                android:src="@drawable/icon_lianjie"/>
+
+            <ImageView
+                android:id="@+id/edit_article_input_goods"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="@dimen/dp_30"
+                android:src="@drawable/icon_fengxiangshangpin"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="@dimen/dp_30"
+                android:src="@drawable/icon_fengexian"/>
+
+            <ImageView
+                android:id="@+id/edit_article_input_back"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="@dimen/dp_30"
+                android:src="@drawable/icon_chehui"/>
+
+            <ImageView
+                android:id="@+id/edit_article_input_forward"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="@dimen/dp_5"
+                android:src="@drawable/icon_huifu"/>
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_0.5"
+            android:background="@color/bg"
+            android:layout_gravity="top"
+            />
+    </FrameLayout>
+
+    <Button
+        android:id="@+id/edit_article_type"
+        android:layout_width="@dimen/dp_50"
+        android:layout_height="@dimen/dp_50"
+        android:layout_gravity="bottom|right"
+        android:layout_marginBottom="@dimen/dp_65"
+        android:layout_marginRight="@dimen/dp_16"
+        android:background="@drawable/bg_rect_cir_light_red"
+        android:gravity="center"
+        android:text="原创"
+        android:textColor="@color/main_red"
+        android:textSize="@dimen/sp_16"/>
+
+    <LinearLayout
+        android:id="@+id/edit_article_type_content"
+        android:layout_width="@dimen/dp_58"
+        android:layout_height="@dimen/dp_80"
+        android:layout_gravity="bottom|right"
+        android:layout_marginBottom="@dimen/dp_124"
+        android:layout_marginRight="@dimen/dp_12"
+        android:background="@drawable/bg_bubble"
+        android:orientation="vertical"
+        android:visibility="gone"
+        >
+
+        <TextView
+            android:id="@+id/edit_article_type_content_original"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_35"
+            android:gravity="center"
+            android:text="原创"
+            android:textColor="@color/white"
+            android:textSize="@dimen/sp_16"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_0.5"
+            android:layout_marginLeft="@dimen/dp_5"
+            android:layout_marginRight="@dimen/dp_5"
+            android:background="@color/white"/>
+
+        <TextView
+            android:id="@+id/edit_article_type_content_reprint"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_35"
+            android:gravity="center"
+            android:text="转载"
+            android:textColor="@color/white"
+            android:textSize="@dimen/sp_16"/>
+
+    </LinearLayout>
+
+</FrameLayout>
